feat: implementar endpoint admin para listar instâncias com nome e número de destino
- Adicionado endpoint /admin/instances para listar todas as instâncias com nome e destination_number
- Corrigido middleware authadmin para tratar corretamente o prefixo 'Bearer' no token
- Atualizado frontend de login para redirecionar para dashboard v4
- Implementado endpoint de listagem de instâncias para administração
- Sistema agora suporta agendamento de envio diário de conversas agrupadas para n8n

--- a/static/dashboard/user-dashboard-v4.html
+++ b/static/dashboard/user-dashboard-v4.html
@@ -133,7 +133,7 @@
                 <!-- Card de Alerta na parte inferior -->
                 <div id="orangeAlert" class="bg-mz-orange-light border border-mz-orange-dark text-mz-orange-dark p-4 rounded-lg flex items-start space-x-3 text-sm mt-auto">
                     <svg class="w-5 h-5 flex-shrink-0" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"></circle><line x1="12" y1="16" x2="12" y2="12"></line><line x1="12" y1="8" x2="12.01" y2="8"></line></svg>
-                    <p class="flex-grow">Todos os dias às 18 horas você receberá no WhatsApp a análise do dia de cada número conectado.</p>
+                    <p class="flex-grow">Todos os dias às 20:20 você receberá no WhatsApp a análise do dia de cada número conectado.</p>
                     <button id="closeOrangeAlertBtn" class="ml-auto -mr-1 -mt-1 p-1 rounded-md text-mz-orange-dark hover:bg-mz-orange-light/50 transition-colors">
                         <svg class="w-4 h-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
                     </button>
