Atualizando documentação sobre endpoints e testes de histórico

--- a/static/dashboard/user-dashboard-v4.html
+++ b/static/dashboard/user-dashboard-v4.html
@@ -67,9 +67,17 @@
             <!-- Rodapé da Barra Lateral -->
             <div class="p-6 border-t border-gray-200">
                 <p class="text-sm text-gray-600 mb-2" id="remainingInstances">Carregando...</p>
-                <div class="w-full bg-gray-200 rounded-full h-1.5">
+                <div class="w-full bg-gray-200 rounded-full h-1.5 mb-3">
                     <div class="bg-mz-green h-1.5 rounded-full" id="progressBar" style="width: 0%"></div>
                 </div>
+                
+                <!-- Botão Meus Planos -->
+                <a href="subscription.html" class="flex items-center justify-center space-x-2 w-full bg-mz-green hover:bg-green-700 text-white font-medium py-2.5 px-4 rounded-lg transition-colors duration-200">
+                    <svg class="w-4 h-4" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 7h.01M7 3h5c.512 0 1.024.195 1.414.586l7 7a2 2 0 010 2.828l-7 7a2 2 0 01-2.828 0l-7-7A1.994 1.994 0 013 12V7a4 4 0 014-4z" />
+                    </svg>
+                    <span>Meus planos</span>
+                </a>
             </div>
         </aside>
 
@@ -88,6 +96,12 @@
                     
                     <!-- Dropdown Menu -->
                     <div id="avatarDropdown" class="hidden absolute right-0 mt-2 w-48 bg-white rounded-lg shadow-lg py-1 z-50 border border-gray-200">
+                        <a href="subscription.html" class="w-full text-left px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 flex items-center">
+                            <svg class="w-4 h-4 mr-2" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 7h.01M7 3h5c.512 0 1.024.195 1.414.586l7 7a2 2 0 010 2.828l-7 7a2 2 0 01-2.828 0l-7-7A1.994 1.994 0 013 12V7a4 4 0 014-4z" />
+                            </svg>
+                            Meus planos
+                        </a>
                         <button id="logoutButton" class="w-full text-left px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 flex items-center">
                             <svg class="w-4 h-4 mr-2" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1" />
