--- a/static/login/index.html
+++ b/static/login/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Autenticação - Metrizap</title>
+    <title>Autenticação - Revizap</title>
     
     <!-- Importação do Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -43,7 +43,7 @@
             <div id="loginBox">
                 <!-- Logótipo -->
                 <h1 class="font-krona text-4xl font-bold text-center text-gray-800 mb-8">
-                    metri<span class="text-mz-green">zap</span>
+                    revi<span class="text-mz-green">zap</span>
                 </h1>
 
                 <!-- Título -->
@@ -119,7 +119,7 @@
             <div id="registerBox" class="hidden">
                 <!-- Logótipo -->
                 <h1 class="font-krona text-4xl font-bold text-center text-gray-800 mb-8">
-                    metri<span class="text-mz-green">zap</span>
+                    revi<span class="text-mz-green">zap</span>
                 </h1>
 
                 <!-- Título -->
