Alterações no botão de solicitação de limite e largura do sidebar

--- a/static/dashboard/subscription.html
+++ b/static/dashboard/subscription.html
@@ -176,8 +176,8 @@
                     </li>
                 </ul>
                 
-                <button id="proBtn" class="mt-8 w-full bg-mz-green text-white font-semibold py-4 px-6 rounded-lg shadow-sm hover:bg-green-700 transition-colors">
-                    Aumentar meus limites agora
+                <button id="proBtn" class="mt-8 w-full bg-mz-green text-white font-semibold py-4 px-6 rounded-lg shadow-sm hover:bg-green-700 transition-colors" onclick="window.open('https://wa.me/+5551981936133', '_blank')">
+                    Solicitar aumento de limite
                 </button>
             </div>
 
@@ -256,7 +256,7 @@
                     essentialBtn.classList.add('cursor-not-allowed', 'bg-gray-200', 'text-gray-500');
                     essentialBtn.classList.remove('bg-mz-green', 'text-white', 'hover:bg-green-700');
                     
-                    proBtn.textContent = 'Aumentar meus limites agora';
+                    proBtn.textContent = 'Solicitar aumento de limite';
                     proBtn.classList.remove('cursor-not-allowed', 'bg-gray-200', 'text-gray-500');
                     proBtn.classList.add('bg-mz-green', 'text-white', 'hover:bg-green-700');
                 } else {
