--- a/static/dashboard/user-dashboard-v4.html
+++ b/static/dashboard/user-dashboard-v4.html
@@ -35,7 +35,7 @@
     <div class="flex h-screen w-full">
         
         <!-- ==== Barra Lateral ==== -->
-        <aside class="w-64 flex-shrink-0 bg-white border-r border-gray-200 flex flex-col h-screen">
+        <aside class="w-[340px] flex-shrink-0 bg-white border-r border-gray-200 flex flex-col h-screen">
             
             <!-- Logo -->
             <div class="h-20 flex items-center px-6">
