--- a/static/index.html
+++ b/static/index.html
@@ -19,6 +19,141 @@
 <script src="https://cdn.tailwindcss.com"></script>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&amp;display=swap" rel="stylesheet"/>
   <link rel="stylesheet" href="./style.css">
+  <!-- ORGANIZATION -->
+<script type="application/ld+json">
+{
+ "@context": "https://schema.org",
+ "@type": "Organization",
+ "name": "Revizap",
+ "url": "https://app.revizap.com.br",
+ "logo": "https://app.revizap.com.br/assets/logo.svg",
+ "description": "O Revizap analisa automaticamente conversas do WhatsApp da sua equipe e mostra onde os vendedores estão perdendo vendas.",
+ "sameAs": [
+   "https://www.instagram.com/revizap",
+   "https://www.facebook.com/revizap",
+   "https://www.linkedin.com/company/revizap"
+ ]  
+}
+</script>
+
+<!-- WEBSITE + SEARCH ACTION -->
+<script type="application/ld+json">
+{
+ "@context": "https://schema.org",
+ "@type": "WebSite",
+ "name": "Revizap",
+ "url": "https://app.revizap.com.br",
+ "potentialAction": {
+   "@type": "SearchAction",
+   "target": "https://app.revizap.com.br/?q={search_term_string}",
+   "query-input": "required name=search_term_string"
+ }
+}
+</script>
+
+<!-- PRODUCT -->
+<script type="application/ld+json">
+{
+ "@context": "https://schema.org/",
+ "@type": "Product",
+ "name": "Revizap",
+ "image": "https://app.revizap.com.br/assets/logo.svg",
+ "description": "Plataforma que analisa conversas do WhatsApp e transforma mensagens em métricas e insights para treinar equipes e aumentar vendas.",
+ "brand": {
+   "@type": "Brand",
+   "name": "Revizap"
+ },
+ "offers": {
+   "@type": "Offer",
+   "url": "https://app.revizap.com.br",
+   "priceCurrency": "BRL",
+   "availability": "https://schema.org/InStock"
+ }
+}
+</script>
+
+<!-- SOFTWARE APPLICATION -->
+<script type="application/ld+json">
+{
+ "@context": "https://schema.org",
+ "@type": "SoftwareApplication",
+ "name": "Revizap",
+ "operatingSystem": "Web",
+ "applicationCategory": "BusinessApplication",
+ "description": "O Revizap analisa conversas do WhatsApp e revela onde sua equipe está perdendo vendas. Métricas, follow-up, objeções e análise de scripts.",
+ "url": "https://app.revizap.com.br",
+ "image": "https://app.revizap.com.br/assets/logo.svg",
+ "creator": {
+   "@type": "Organization",
+   "name": "Revizap"
+ },
+ "offers": {
+   "@type": "Offer",
+   "url": "https://app.revizap.com.br",
+   "price": "0",
+   "priceCurrency": "BRL",
+   "availability": "https://schema.org/InStock"
+ }
+}
+</script>
+
+<!-- FAQ PAGE (use se houver perguntas na página) -->
+<script type="application/ld+json">
+{
+ "@context": "https://schema.org",
+ "@type": "FAQPage",
+ "mainEntity": [
+  {
+   "@type": "Question",
+   "name": "O que é o Revizap?",
+   "acceptedAnswer": {
+    "@type": "Answer",
+    "text": "É uma plataforma que analisa conversas de vendedores no WhatsApp e transforma mensagens em métricas reais para melhorar conversão e atendimento."
+   }
+  },
+  {
+   "@type": "Question",
+   "name": "Funciona com WhatsApp comum?",
+   "acceptedAnswer": {
+    "@type": "Answer",
+    "text": "Sim. Basta exportar conversas ou integrar o número comercial. Funciona com WhatsApp e WhatsApp Business."
+   }
+  },
+  {
+   "@type": "Question",
+   "name": "O Revizap é compatível com LGPD?",
+   "acceptedAnswer": {
+    "@type": "Answer",
+    "text": "Sim. O processamento de dados é corporativo e autorizado pela empresa. Todas as informações são tratadas com segurança."
+   }
+  },
+  {
+   "@type": "Question",
+   "name": "Preciso treinar o vendedor para usar?",
+   "acceptedAnswer": {
+    "@type": "Answer",
+    "text": "Não. O Revizap analisa automaticamente as conversas e entrega relatórios prontos para o gestor."
+   }
+  }
+ ]
+}
+</script>
+
+<!-- BREADCRUMBS (ative apenas se a página tiver essas seções) -->
+<script type="application/ld+json">
+{
+ "@context": "https://schema.org",
+ "@type": "BreadcrumbList",
+ "itemListElement": [
+  {
+   "@type": "ListItem",
+   "position": 1,
+   "name": "Início",
+   "item": "https://app.revizap.com.br"
+  }
+ ]
+}
+</script>
   </head>
   <body class="min-h-screen flex flex-col"><!-- HEADER --><header class="w-full py-5 px-6 md:px-12 flex justify-between items-center max-w-7xl mx-auto" id="ibfmq"><!-- Logo Placeholder --><div class="flex-shrink-0"><img id="ir64df" src="assets/logo__1_.svg"/></div><!-- Navigation - Desktop --><nav class="hidden md:flex space-x-8 lg:space-x-12 font-medium text-gray-600"><a href="#" class="text-gray-900 border-b-2 border-green-500 pb-1">INICIO</a><a href="#beneficios" class="hover:text-gray-900 transition-colors">BENEFÍCIOS</a><a href="#para-quem" class="hover:text-gray-900 transition-colors">PARA QUEM</a><a href="#" class="hover:text-gray-900 transition-colors">BLOG</a></nav><!-- CTA Button Header --><div><a href="https://app.revizap.com.br/login/" id="ix48s" class="bg-black text-white px-6 py-2.5 rounded-md font-medium hover:bg-gray-800 transition-colors">
                 Entrar
